--- a/Code.ipynb
+++ b/Code.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = Image.open('data/dogs.jpeg')\n",
+    "img = Image.open('dogs.jpeg')\n",
     "img.show()"
    ]
   },
@@ -314,7 +314,7 @@
    "source": [
     "import matplotlib.image as img\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.imshow([img_dom])\n",
+    "plt.imshow([km.cluster_centers_/255])\n",
     "plt.show()"
    ]
   },
